--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets", "src/assets/icons", "src/manifest.webmanifest", "src/silent-renew.html"],
-            "styles": ["src/global_styles.css"],
+            "styles": ["src/styles.scss"],
             "scripts": [],
             "preserveSymlinks": true
           },
@@ -156,7 +156,7 @@
           "options": {
             "tsConfig": "tsconfig.spec.json",
             "assets": ["src/favicon.ico", "src/assets", "src/manifest.webmanifest", "src/silent-renew.html"],
-            "styles": ["src/global_styles.css"],
+            "styles": ["src/styles.scss"],
             "scripts": []
           }
         },
