--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@js-smart/ng-kit": "18.5.0",
 		"@ngneat/query": "3.0.0",
 		"@tanstack/query-core": "5.51.17",
+		"bootstrap": "^5.3.3",
 		"rxjs": "7.8.1",
 		"tslib": "2.6.3",
 		"zone.js": "0.14.8"
